--- a/test-output/index.html
+++ b/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\MyPC\AppData\Local\Temp\testng-eclipse-1462290684\testng-customsuite.xml</span>
+                    <span>C:\Users\MyPC\AppData\Local\Temp\testng-eclipse--1515674313\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,7 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -107,6 +107,11 @@
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tcLogin.database" hash-for-method="testqueryShowCustomers">testqueryShowCustomers</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="tcLogin.database" hash-for-method="testqueryShowCustomersWithID">testqueryShowCustomersWithID</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -141,12 +146,19 @@
                   <span class="method-name">testqueryShowCustomers</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testqueryShowCustomersWithID">
+                  </a> <!-- testqueryShowCustomersWithID -->
+                  <span class="method-name">testqueryShowCustomersWithID</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\MyPC\AppData\Local\Temp\testng-eclipse-1462290684\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\MyPC\AppData\Local\Temp\testng-eclipse--1515674313\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -195,20 +207,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'queryUpdateCustomer')
 data.setCell(0, 2, 'tcLogin.database')
-data.setCell(0, 3, 95);
+data.setCell(0, 3, 87);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'testqueryShowCustomers')
 data.setCell(1, 2, 'tcLogin.database')
-data.setCell(1, 3, 48);
+data.setCell(1, 3, 45);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'testqueryShowCustomersWithID')
+data.setCell(2, 2, 'tcLogin.database')
+data.setCell(2, 3, 6);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 143 ms</span>
+              <span class="suite-total-time">Total running time: 138 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -223,14 +239,12 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">tcLogin.database</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">testqueryShowCustomersWithID</span>
-                <br/>
                 <span class="ignored-method-name">queryInsertCustomers</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
@@ -250,15 +264,19 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">queryUpdateCustomer</span>
-                <span class="method-start">512 ms</span>
+                <span class="method-start">532 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testqueryShowCustomers</span>
-                <span class="method-start">612 ms</span>
+                <span class="method-start">624 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testqueryShowCustomersWithID</span>
+                <span class="method-start">674 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">668 ms</span>
+                <span class="method-start">684 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
