--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f4a68b">  <td>18/04/19 07:53:29</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;database.setUp()[pri:0, instance:tcLogin.database@1c62251]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="f4a68b">  <td>18/04/19 07:53:29</td>   <td>506</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="database.queryUpdateCustomer()[pri:0, instance:tcLogin.database@1c62251]">queryUpdateCustomer</td> 
-  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="f4a68b">  <td>18/04/19 07:53:29</td>   <td>606</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="database.testqueryShowCustomers()[pri:0, instance:tcLogin.database@1c62251]">testqueryShowCustomers</td> 
-  <td>main@12186738</td>   <td></td> </tr>
-<tr bgcolor="f4a68b">  <td>18/04/19 07:53:29</td>   <td>662</td> <td>&nbsp;</td><td title="&lt;&lt;database.tearDown()[pri:0, instance:tcLogin.database@1c62251]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@12186738</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>18/04/20 06:57:02</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;database.setUp()[pri:0, instance:tcLogin.database@17fd0e6]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>18/04/20 06:57:02</td>   <td>527</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="database.queryUpdateCustomer()[pri:0, instance:tcLogin.database@17fd0e6]">queryUpdateCustomer</td> 
+  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>18/04/20 06:57:02</td>   <td>619</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="database.testqueryShowCustomers()[pri:0, instance:tcLogin.database@17fd0e6]">testqueryShowCustomers</td> 
+  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>18/04/20 06:57:03</td>   <td>669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="database.testqueryShowCustomersWithID()[pri:0, instance:tcLogin.database@17fd0e6]">testqueryShowCustomersWithID</td> 
+  <td>main@1402865</td>   <td></td> </tr>
+<tr bgcolor="beef9d">  <td>18/04/20 06:57:03</td>   <td>679</td> <td>&nbsp;</td><td title="&lt;&lt;database.tearDown()[pri:0, instance:tcLogin.database@17fd0e6]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1402865</td>   <td></td> </tr>
 </table>
